Atualização na documentação #4

--- a/docs/css/javacode.css
+++ b/docs/css/javacode.css
@@ -70,7 +70,7 @@ div.javacode div.linenumber
 
 .xw52fz_comment
 {
-    color: var(--slategrey);
+    color: var(--slategray);
 }
 
 .xw52fz_classname
