Inclusão de manual de uso na documentação

--- a/docs/css/frames.css
+++ b/docs/css/frames.css
@@ -74,6 +74,7 @@
 .frame-section span.filename /*Para nomes de arquivos*/
 {
     font-family: 'Courier New', Courier, monospace;
+    font-style: italic;
 }
 
 
