--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -113,6 +113,7 @@ nav#sidebar a
 {
     text-decoration: none;
     color: var(--nav-color);
+    transition: padding-left 0.4s;
 }
 
 nav#sidebar a:hover
